[gd_scene load_steps=6 format=3 uid="uid://dj443rk8yk0hi"]

[ext_resource type="Script" path="res://src/UI/Dialog Settings/Scripts/StartQuest.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b3h2bvwm0hbhp" path="res://src/UI/Dialog Settings/ChooseQuest.tscn" id="2"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="3"]
[ext_resource type="FontFile" uid="uid://baod7xnbr0oe7" path="res://Assets/Font/TinyFont.tres" id="4"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="StartQuest" type="Control"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 740.0
offset_right = 436.0
offset_bottom = 790.0
theme = ExtResource("3")
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="ChooseQuest" parent="Panel" instance=ExtResource("2")]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -10.0
offset_right = 160.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("4")
text = "SELECT_QUEST"

[node name="QuestID" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = -8.0
offset_right = 289.0
offset_bottom = 16.0
grow_vertical = 2
min_value = -1.0
max_value = 1e+07
prefix = "ID"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -11.0
offset_right = -86.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "X"

[connection signal="quest_chosen" from="Panel/ChooseQuest" to="." method="_on_ChooseQuest_quest_chosen"]
[connection signal="value_changed" from="Panel/QuestID" to="." method="_on_QuestID_value_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
